Update code learn

--- a/TanGaiDaiCuong/TanGaiDaiCuong.csproj
+++ b/TanGaiDaiCuong/TanGaiDaiCuong.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="detailDoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="detailDoc.Designer.cs">
+      <DependentUpon>detailDoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="LearnDoc.cs" />
     <Compile Include="DictDoc.cs" />
     <Compile Include="Doc.cs" />
@@ -89,6 +95,9 @@
     <EmbeddedResource Include="dict.resx">
       <DependentUpon>dict.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="detailDoc.resx">
+      <DependentUpon>detailDoc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="learn.resx">
       <DependentUpon>learn.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,6 +128,25 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
