Update abstraction properties

--- a/TanGaiDaiCuong/TanGaiDaiCuong.csproj
+++ b/TanGaiDaiCuong/TanGaiDaiCuong.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileController.cs" />
     <Compile Include="TrieNode.cs" />
     <Compile Include="Trie.cs" />
     <Compile Include="detailDoc.cs">
